name:                fast-nats
version:             0.1.0.1
synopsis:            Natural Numbers with no overhead
description:         Dependent Singleton natural numbers. The implementation uses
                     inductive naturals at the type level but machine integers at
                     the term level.
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10
Bug-Reports:         https://github.com/mckeankylej/fast-nats/issues
             
library
  exposed-modules:     Data.Promotion.Type.Equality
                     , Data.Nat.Internal
                     , Data.Nat
                     , Data.Nat.Properties
                     , Data.Fin
  build-depends:       base >=4.9 && <4.10
                     , singletons >= 2.2 && < 2.3
  hs-source-dirs:      src
  default-language:    Haskell2010

Source-Repository head
    Type: git
    Location: https://github.com/mckeankylej/fast-nats
